@@ -141,25 +141,6 @@ sub new {
     return($self);
 }
 
-
-=item $font = PDF::API2::Resource::Font::BdFont->new_api $api, %options
-
-Returns a BdFont object. This method is different from 'new' that
-it needs an PDF::API2-object rather than a PDF::API2::PDF::File-object.
-
-=cut
-
-sub new_api {
-  my ($class,$api,@opts)=@_;
-
-  my $obj=$class->new($api->{pdf},@opts);
-
-  $api->{pdf}->new_obj($obj) unless($obj->is_obj($api->{pdf}));
-
-  $api->{pdf}->out_obj($api->{pages});
-  return($obj);
-}
-
 sub readBDF {
     my ($self,$file)=@_;
     my $data={};
