@@ -186,27 +186,6 @@ sub new
     return($self);
 }
 
-=item $font = PDF::API2::Resource::Font::CoreFont->new_api $api, $fontname, %options
-
-Returns a corefont object. This method is different from 'new' that
-it needs an PDF::API2-object rather than a PDF::API2::PDF::File-object.
-
-=cut
-
-sub new_api
-{
-    my ($class,$api,@opts)=@_;
-
-    my $obj=$class->new($api->{pdf},@opts);
-
-    $api->{pdf}->new_obj($obj) unless($obj->is_obj($api->{pdf}));
-
-##  $api->resource('Font',$obj->name,$obj);
-
-    $api->{pdf}->out_obj($api->{pages});
-    return($obj);
-}
-
 =item PDF::API2::Resource::Font::CoreFont->loadallfonts()
 
 "Requires in" all fonts available as corefonts.
