@@ -151,22 +151,6 @@ sub new {
     return($self);
 }
 
-=item $font = PDF::API2::Resource::UniFont->new_api $api, $name, %options
-
-Returns a uni-font object. This method is different from 'new' that
-it needs an PDF::API2-object rather than a Text::PDF::File-object.
-
-=cut
-
-sub new_api {
-    my ($class,$api,@opts)=@_;
-
-    my $obj=$class->new($api->{pdf},@opts);
-    $obj->{api}=$api;
-
-    return($obj);
-}
-
 sub isvirtual { return(1); }
 
 sub fontlist
