@@ -41,9 +41,6 @@ sub new {
     return $self;
 }
 
-# Deprecated (rolled into new)
-sub new_api { my $self = shift(); return $self->new(@_); }
-
 sub outobjdeep {
     my ($self, @options) = @_;
     $self->textend() unless $self->{' nofilt'};
