@@ -53,15 +53,6 @@ sub new {
     return $self;
 }
 
-sub new_api {
-    my ($class, $api, @opts) = @_;
-
-    my $obj = $class->new($api->{'pdf'}, @opts);
-    $obj->{' api'} = $api;
-
-    return $obj;
-}
-
 sub read_jpeg {
     my ($self, $fh) = @_;
     my ($buf, $p, $h, $w, $c, $ff, $mark, $len);
