@@ -50,23 +50,6 @@ sub new
     return($self);
 }
 
-=item $res = PDF::API2::Resource::XObject::Image::TIFF->new_api $api, $file [, $name]
-
-Returns a tiff-image object. This method is different from 'new' that
-it needs an PDF::API2-object rather than a Text::PDF::File-object.
-
-=cut
-
-sub new_api
-{
-    my ($class,$api,@opts)=@_;
-
-    my $obj=$class->new($api->{pdf},@opts);
-    $obj->{' api'}=$api;
-
-    return($obj);
-}
-
 sub deLZW
 {
     my ($ibits,$stream)=@_;
